# CCleaner_Project

./: README.md
tcs_lib/: build.sh
tcs_lib/inc/: i2c.h  tcs.h
tcs_lib/src/: i2c.c  main.c  tcs.c
turtlebot4_ws/map/: batiment_H.pgm  batiment_H.yaml
turtlebot4_ws/src/tcs_interface/: CMakeLists.txt  package.xml
turtlebot4_ws/src/tcs_interface/msg/: ColorRGBC.msg
turtlebot4_ws/src/torturebot4_navigation/: package.xml  setup.cfg  setup.py
turtlebot4_ws/src/torturebot4_navigation/torturebot4_navigation/: torturebot4_map_navigation.py
turtlebot4_ws/src/turtlebot4_pid/: package.xml  setup.cfg  setup.py
turtlebot4_ws/src/turtlebot4_pid/turtlebot4_pid/: turtlebot4_pid.py
turtlebot4_ws/src/turtlebot4_tcs/: CMakeLists.txt  package.xml
turtlebot4_ws/src/turtlebot4_tcs/src/: turtlebot4_tcs_node.cpp
