<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>torturebot4_navigation</name>
  <version>0.0.1</version>
  <description>Navigation Stack for Torturebot4</description>
  <maintainer email="nathan.rassie@utbm.fr">Harlock</maintainer>
  <license>Apache License 2.0</license>

  <depend>irobot_create_msgs</depend>
  <depend>rclpy</depend>
  <depend>turtlebot4_navigation</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
