<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_tcs</name>
  <version>0.1.0</version>
  <description>Color sensor data publisher</description>
  <maintainer email="thorgaran1@gmail.com">Thorgaran</maintainer>
  <license>Apache 2.0</license>
  
  <depend>rclcpp</depend>
  <depend>tcs_interface</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
